# hoover_bot

./: .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml
.github/workflows/: black.yml  deploy.yml  docker-image.yml  pylint.yml
deploy/k3s/: README.md  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
hooverbot/: config.py  main.py
hooverbot/clients/: spotify.py
hooverbot/handlers/: handler.py
hooverbot/handlers/actions/: sort_links.py
hooverbot/handlers/commands/: clean.py
hooverbot/handlers/events/: on_message.py  on_ready.py
hooverbot/logger/: console.py  log_formatters.py
hooverbot/logging/: log_formatters.py
src/: action_handler.py  channels.py  config.py  console.py  main.py
src/actions/: log_formatters.py  sort_links.py
src/commands/: clean.py
src/events/: event_handler.py  on_message.py  on_ready.py
