[tool.poetry]
name = "hoover-bot"
version = "0.1.0"
description = "Listen To This bot"
authors = ["codyconfer <mail@codyconfer.me>"]
readme = "README.md"
packages = [{include = "./hooverbot"}]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.2.2"
python-dotenv = "^1.0.0"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
