[tool.poetry]
name = "hoover-bot"
version = "0.1.0"
description = "Listen To This bot"
authors = ["codyconfer <mail@codyconfer.me>"]
readme = "README.md"
packages = [{include = "./hooverbot"}]

[tool.poetry.dependencies]
python = "^3.14"
discord-py = "^2.7.1"
python-dotenv = "^1.2.2"
pydantic = "^2.13.4"
pydantic-settings = "^2.14.2"
prometheus-client = "^0.25.0"


[tool.poetry.group.dev.dependencies]
black = "^26.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
